--- a/services/batch_conductor_service/Dockerfile
+++ b/services/batch_conductor_service/Dockerfile
@@ -1,47 +1,19 @@
-FROM python:3.11-slim
+# Auto-generated production Dockerfile for batch_conductor_service
+ARG DEPS_IMAGE=huledu-deps:dev
+FROM ${DEPS_IMAGE} AS base
 
-# ------------------------------------------------------------------
-# Environment
-# ------------------------------------------------------------------
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
+    PDM_USE_VENV=false \
+    PDM_IGNORE_ACTIVE_VENV=1 \
+    PROJECT_ROOT=/app \
     PYTHONPATH=/app \
-    ENV_TYPE=docker \
-    QUART_APP=app:app \
-    QUART_ENV=production \
-    LOG_LEVEL=INFO \
-    PORT=4002 \
-    KAFKA_BOOTSTRAP_SERVERS=kafka:9092 \
-    PDM_USE_VENV=false
+    ENV_TYPE=docker
 
-# ------------------------------------------------------------------
-# Base layer & deps
-# ------------------------------------------------------------------
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y --no-install-recommends curl && \
-    rm -rf /var/lib/apt/lists/* && \
-    pip install --no-cache-dir pdm
-
-# Shared python packages first (leverages Docker cache)
-COPY libs/common_core/ /app/libs/common_core/
-COPY libs/huleedu_service_libs/ /app/libs/huleedu_service_libs/
-
-# Copy service code
-COPY services/batch_conductor_service/ /app/services/batch_conductor_service/
-
-# Install deps declared in this service's pyproject
-WORKDIR /app/services/batch_conductor_service
-# Use --frozen-lockfile to skip lockfile generation and avoid segmentation faults
-COPY pdm.lock /app/services/batch_conductor_service/pdm.lock
-RUN pdm install --prod --frozen-lockfile
-
-# ------------------------------------------------------------------
-# Non-root execution
-# ------------------------------------------------------------------
-RUN groupadd -r appuser && useradd --no-log-init -r -g appuser appuser
+FROM base AS production
+COPY --chown=appuser:appuser services/batch_conductor_service/ /app/services/batch_conductor_service/
 USER appuser
-
-EXPOSE ${PORT}
-
-CMD ["pdm", "run", "start"]
+WORKDIR /app
+CMD ["pdm", "run", "-p", "/app", "python", "-m", "hypercorn", "services.batch_conductor_service.app:app", "--bind", "0.0.0.0:4002", "--worker-class", "asyncio"]
