--- a/services/cj_assessment_service/Dockerfile.dev
+++ b/services/cj_assessment_service/Dockerfile.dev
@@ -1,89 +1,19 @@
-# Development-optimized Dockerfile with improved layer caching
-# Use this for development with volume mounts for hot-reload
-
-FROM python:3.11-slim AS base
+# Auto-generated development Dockerfile for cj_assessment_service
+ARG DEPS_IMAGE=huledu-deps:dev
+FROM ${DEPS_IMAGE} AS base
 
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
     PDM_USE_VENV=false \
-    ENV_TYPE=docker \
+    PDM_IGNORE_ACTIVE_VENV=1 \
+    PROJECT_ROOT=/app \
     PYTHONPATH=/app \
-    LOG_LEVEL=INFO \
-    SERVICE_NAME=cj_assessment_service
-
-# Install system dependencies (rarely change - good cache layer)
-RUN apt-get update && apt-get install -y \
-    --no-install-recommends \
-    curl \
-    build-essential \
-    python3-dev \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install PDM (rarely changes - good cache layer)
-RUN pip install --no-cache-dir pdm
+    ENV_TYPE=docker
 
 WORKDIR /app
 
-# ========================================
-# DEPENDENCY INSTALLATION OPTIMIZATION
-# ========================================
-
-# First, copy only dependency files for better caching
-# This layer will only rebuild when dependencies change
-COPY libs/common_core/pyproject.toml /app/libs/common_core/pyproject.toml
-COPY libs/huleedu_service_libs/pyproject.toml /app/libs/huleedu_service_libs/pyproject.toml
-COPY services/cj_assessment_service/pyproject.toml /app/services/cj_assessment_service/pyproject.toml
-
-# Generate lockfile if it doesn't exist (better than --frozen-lockfile for dev)
-WORKDIR /app/services/cj_assessment_service
-RUN pdm lock --lockfile pdm.lock.docker || echo "Lock generation failed, will install without lock"
-
-# Now copy the source files for shared libraries
-# These change more frequently but still less than service code
-COPY libs/common_core/src/ /app/libs/common_core/src/
-COPY libs/huleedu_service_libs/src/ /app/libs/huleedu_service_libs/src/
-
-# Install dependencies (this layer caches well if pyproject.toml doesn't change)
-# Use lockfile if it exists, otherwise install normally
-RUN if [ -f "pdm.lock.docker" ]; then \
-        pdm install --dev --lockfile pdm.lock.docker; \
-    else \
-        pdm install --dev; \
-    fi
-
-# ========================================
-# DEVELOPMENT STAGE (for volume mounts)
-# ========================================
 FROM base AS development
-
-# Create user with cj_assessment naming convention
-RUN groupadd -r cjassessment && useradd --no-log-init -r -g cjassessment cjassessment
-
-# Copy service code (this layer changes most frequently)
-COPY services/cj_assessment_service/ /app/services/cj_assessment_service/
-
-# Set permissions
-RUN chown -R cjassessment:cjassessment /app
-
-USER cjassessment
-WORKDIR /app/services/cj_assessment_service
-
-# Use pdm run for development - integrated HTTP API + Kafka worker
-CMD ["pdm", "run", "start"]
-
-# ========================================
-# PRODUCTION STAGE (for deployment)
-# ========================================
-FROM base AS production
-
-# Copy service code for production build
-COPY services/cj_assessment_service/ /app/services/cj_assessment_service/
-
-# Create user and set permissions
-RUN groupadd -r cjassessment && useradd --no-log-init -r -g cjassessment cjassessment \
-    && chown -R cjassessment:cjassessment /app
-
-USER cjassessment
-WORKDIR /app/services/cj_assessment_service
-
-CMD ["pdm", "run", "start"]
+COPY --chown=appuser:appuser services/cj_assessment_service/ /app/services/cj_assessment_service/
+USER appuser
+WORKDIR /app
+CMD ["pdm", "run", "-p", "/app", "python", "services/cj_assessment_service/app.py"]
