--- a/services/result_aggregator_service/Dockerfile
+++ b/services/result_aggregator_service/Dockerfile
@@ -1,43 +1,19 @@
-FROM python:3.11-slim
+# Auto-generated production Dockerfile for result_aggregator_service
+ARG DEPS_IMAGE=huledu-deps:dev
+FROM ${DEPS_IMAGE} AS base
 
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
+    PDM_USE_VENV=false \
+    PDM_IGNORE_ACTIVE_VENV=1 \
+    PROJECT_ROOT=/app \
     PYTHONPATH=/app \
-    ENV_TYPE=docker \
-    QUART_APP=app:app \
-    QUART_ENV=production \
-    LOG_LEVEL=INFO \
-    PORT=4003 \
-    KAFKA_BOOTSTRAP_SERVERS=kafka:9092 \
-    PDM_USE_VENV=false
+    ENV_TYPE=docker
 
-# Set base WORKDIR for the application
 WORKDIR /app
 
-# Install curl for health checks and PDM globally in the image
-RUN apt-get update && apt-get install -y --no-install-recommends curl && \
-    rm -rf /var/lib/apt/lists/* && \
-    pip install --no-cache-dir pdm
-
-# Copy shared local dependencies first
-COPY libs/common_core/ /app/libs/common_core/
-COPY libs/huleedu_service_libs/ /app/libs/huleedu_service_libs/
-
-# Now, handle the specific service
-COPY services/result_aggregator_service/ /app/services/result_aggregator_service/
-
-# Set working directory to the service
-WORKDIR /app/services/result_aggregator_service
-
-# Install dependencies for the result_aggregator_service using its own pyproject.toml
-# Use --frozen-lockfile to skip lockfile generation and avoid segmentation faults
-COPY pdm.lock /app/services/result_aggregator_service/pdm.lock
-RUN pdm install --prod --frozen-lockfile
-
-RUN groupadd -r appuser && useradd --no-log-init -r -g appuser appuser
+FROM base AS production
+COPY --chown=appuser:appuser services/result_aggregator_service/ /app/services/result_aggregator_service/
 USER appuser
-
-EXPOSE ${PORT}
-
-# Command to run the application from service directory
-CMD ["pdm", "run", "start"]
+WORKDIR /app
+CMD ["pdm", "run", "-p", "/app", "python", "services/result_aggregator_service/app.py"]
