--- a/services/spellchecker_service/Dockerfile.dev
+++ b/services/spellchecker_service/Dockerfile.dev
@@ -1,94 +1,19 @@
-# Development-optimized Dockerfile with improved layer caching
-# Use this for development with volume mounts for hot-reload
-
-FROM python:3.11-slim AS base
+# Auto-generated development Dockerfile for spellchecker_service
+ARG DEPS_IMAGE=huledu-deps:dev
+FROM ${DEPS_IMAGE} AS base
 
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
     PDM_USE_VENV=false \
-    ENV_TYPE=docker \
+    PDM_IGNORE_ACTIVE_VENV=1 \
+    PROJECT_ROOT=/app \
     PYTHONPATH=/app \
-    LOG_LEVEL=INFO
-
-# Install system dependencies (rarely change - good cache layer)
-RUN apt-get update && apt-get install -y \
-    --no-install-recommends \
-    curl \
-    build-essential \
-    python3-dev \
-    && rm -rf /var/lib/apt/lists/*
-
-# Install PDM (rarely changes - good cache layer)
-RUN pip install --no-cache-dir pdm
+    ENV_TYPE=docker
 
 WORKDIR /app
 
-# ========================================
-# DEPENDENCY INSTALLATION OPTIMIZATION
-# ========================================
-
-# First, copy only dependency files for better caching
-# This layer will only rebuild when dependencies change
-COPY libs/common_core/pyproject.toml /app/libs/common_core/pyproject.toml
-COPY libs/huleedu_service_libs/pyproject.toml /app/libs/huleedu_service_libs/pyproject.toml
-COPY libs/huleedu_nlp_shared/pyproject.toml /app/libs/huleedu_nlp_shared/pyproject.toml
-COPY services/spellchecker_service/pyproject.toml /app/services/spellchecker_service/pyproject.toml
-
-# Generate lockfile if it doesn't exist (better than --frozen-lockfile for dev)
-WORKDIR /app/services/spellchecker_service
-RUN pdm lock --lockfile pdm.lock.docker || echo "Lock generation failed, will install without lock"
-
-# Now copy the source files for shared libraries
-# These change more frequently but still less than service code
-COPY libs/common_core/src/ /app/libs/common_core/src/
-COPY libs/huleedu_service_libs/src/ /app/libs/huleedu_service_libs/src/
-COPY libs/huleedu_nlp_shared/src/ /app/libs/huleedu_nlp_shared/src/
-
-# Install dependencies (this layer caches well if pyproject.toml doesn't change)
-# Use lockfile if it exists, otherwise install normally
-RUN if [ -f "pdm.lock.docker" ]; then \
-        pdm install --dev --lockfile pdm.lock.docker; \
-    else \
-        pdm install --dev; \
-    fi
-
-# ========================================
-# DEVELOPMENT STAGE (for volume mounts)
-# ========================================
 FROM base AS development
-
-# Create user and data directory first
-RUN mkdir -p /app/services/spellchecker_service/data/corrected_essays \
-    && groupadd -r appuser && useradd --no-log-init -r -g appuser -u 1000 appuser \
-    && chown -R 1000:1000 /app/services/spellchecker_service/data
-
-# Copy service code (this layer changes most frequently)
-COPY services/spellchecker_service/ /app/services/spellchecker_service/
-
-# Set permissions
-RUN chown -R appuser:appuser /app
-
+COPY --chown=appuser:appuser services/spellchecker_service/ /app/services/spellchecker_service/
 USER appuser
-WORKDIR /app/services/spellchecker_service
-
-# Use pdm run for development
-CMD ["pdm", "run", "start"]
-
-# ========================================
-# PRODUCTION STAGE (for deployment)
-# ========================================
-FROM base AS production
-
-# Copy service code for production build
-COPY services/spellchecker_service/ /app/services/spellchecker_service/
-
-# Create user, data directory and set permissions
-RUN mkdir -p /app/services/spellchecker_service/data/corrected_essays \
-    && groupadd -r appuser && useradd --no-log-init -r -g appuser -u 1000 appuser \
-    && chown -R 1000:1000 /app/services/spellchecker_service/data \
-    && chown -R appuser:appuser /app
-
-USER appuser
-WORKDIR /app/services/spellchecker_service
-
-CMD ["pdm", "run", "start"]
+WORKDIR /app
+CMD ["pdm", "run", "-p", "/app", "python", "services/spellchecker_service/app.py"]
