feat: add ENG5 NP batch runner CLI with Kafka integration
- Implemented `pdm run eng5-np-run` with plan/dry-run/execute modes for processing ENG5 assessment batches
- Added schema-compliant artefact generation with deterministic file discovery and checksum validation
- Integrated Kafka event publishing for `ELS_CJAssessmentRequestV1` with optional completion-event capture and configurable LLM overrides

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -399,6 +399,8 @@ obs-restart = "docker compose restart prometheus grafana loki jaeger promtail al
 obs-logs = "docker compose logs -f prometheus grafana loki jaeger promtail alertmanager"
 obs-status = "docker compose ps prometheus grafana loki jaeger promtail alertmanager"
 
+eng5-np-run = "python .claude/research/scripts/eng5_np_batch_runner.py"
+
 [tool.pdm.dev-dependencies]
 dev = [
     "-e file:///${PROJECT_ROOT}/libs/common_core",
