feat: add repomix package generation skill and documentation
- Created interactive `/repomix` command with pre-defined templates (metadata-flow, code-review, architecture, context) for generating AI-ready code analysis packages
- Added comprehensive skill documentation with real-world examples showing token budgets and file selection strategies
- Updated HANDOFF.md to document metadata fix for CJ assessment LLM requests (essay_a_id, essay_b_id, prompt_sha256 now properly injected)

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ data/
 datasets/
 /*.xml
 
+# Repomix packages (generated AI analysis artifacts)
+.claude/repomix_packages/
+
 # Security - JWT and other secrets
 secrets/
 *.pem
