refactor: reorganize ENG5 NP runner and update agent model configs
- Moved ENG5 NP batch runner from `.claude/research/scripts/` to `scripts/cj_experiments_runners/eng5_np/` for better organization
- Updated HANDOFF.md references to reflect new runner location and test paths
- Changed lead-architect-planner and lead-dev-code-reviewer agents from opus to sonnet model
- Removed unused numpy import from cj_confidence_analysis.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -399,7 +399,8 @@ obs-restart = "docker compose restart prometheus grafana loki jaeger promtail al
 obs-logs = "docker compose logs -f prometheus grafana loki jaeger promtail alertmanager"
 obs-status = "docker compose ps prometheus grafana loki jaeger promtail alertmanager"
 
-eng5-np-run = "python .claude/research/scripts/eng5_np_batch_runner.py"
+eng5-np-run = "python -m scripts.cj_experiments_runners.eng5_np.cli"
+llm-check-models = "python -m services.llm_provider_service.cli_check_models"
 
 [tool.pdm.dev-dependencies]
 dev = [
