refactor: consolidate handoff documentation and update integration guides
- Replaced verbose CJ confidence validation handoff with concise Phase 2.5 completion summary
- Compressed LLM Provider Service README from 235 to 33 LoC (removed deprecated content)
- Added Phase 2.5 integration verification prompt documenting manifest integration patterns
- Updated README_FIRST with Phase 3.2 typing improvements and ENG5 runner architect brief

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -409,6 +409,7 @@ obs-logs = "docker compose logs -f prometheus grafana loki jaeger promtail alert
 obs-status = "docker compose ps prometheus grafana loki jaeger promtail alertmanager"
 
 eng5-np-run = "python -m scripts.cj_experiments_runners.eng5_np.cli"
+cj-admin = "python -m services.cj_assessment_service.cli_admin"
 llm-check-models = "python -m services.llm_provider_service.cli_check_models"
 
 [tool.pdm.dev-dependencies]
