feat: enforce metadata compliance and add ENG5 execute-mode runbook
- Added `prompt_sha256` backfill in LLM provider error callbacks and fail-fast validation in ENG5 runner to guarantee schema-complete comparison metadata
- Implemented runner hardening: duplicate suppression, cost summaries, manifest hashing, and document blob serialization with schema validation via jsonschema
- Authored operational runbook (Documentation/OPERATIONS/ENG5-NP-RUNBOOK.md) covering prerequisites, execution steps, monitoring

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ monorepo-tools = [
     "reportlab",
     "types-reportlab",
     "aiosmtplib>=4.0.1",
+    "jsonschema",
     # Verification and analysis tools
     "pandas",
     "matplotlib",
