--- a/pyproject.toml
+++ b/pyproject.toml
@@ -414,6 +414,7 @@ obs-logs = "docker compose logs -f prometheus grafana loki jaeger promtail alert
 obs-status = "docker compose ps prometheus grafana loki jaeger promtail alertmanager"
 
 eng5-np-run = "python -m scripts.cj_experiments_runners.eng5_np.cli"
+eng5-runner = {shell = "scripts/run_eng5_np_runner.sh $@"}  # Run ENG5 NP runner in container with infrastructure orchestration
 cj-admin = "python -m services.cj_assessment_service.cli_admin"
 llm-check-models = "python -m services.llm_provider_service.cli_check_models"
 llm-admin = "python -m services.llm_provider_service.admin_cli"
