docs: add ENG5 runner architecture research and anchor registration guide
- Created comprehensive architecture document mapping assignment ownership, essay storage patterns, and cross-service data flows for CJ assessment pipeline
- Added practical anchor registration example with complete workflow from file organization through CLI execution
- Fixed CJ service URL configuration in docker-compose (port 8082→9090)
- Updated task documentation to track research completion and remaining alignment

--- a/docker-compose.eng5-runner.yml
+++ b/docker-compose.eng5-runner.yml
@@ -18,7 +18,7 @@ services:
       - ENVIRONMENT=${ENVIRONMENT:-production}
       - LOG_LEVEL=INFO
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
-      - CJ_ASSESSMENT_SERVICE_URL=http://cj_assessment_service:8082
+      - CJ_SERVICE_URL=http://cj_assessment_service:9090
       - LLM_PROVIDER_SERVICE_URL=http://llm_provider_service:8084
       - CONTENT_SERVICE_URL=http://content_service:8000/v1/content
     volumes:
