feat(services): Batch 1 migration to centralized database URL (4 services)
Services migrated:
- File Service (212 tests passing)
- Result Aggregator Service (288 tests passing)
- Class Management Service (155 tests passing)
- Email Service (142 tests passing, uppercase rename)

Changes per service:
- Replace manual URL construction with build_database_url()
- Rename database_url → DATABASE_URL (Rule 043 compliance)
- Simplify alembic env.py configuration
- Update test references to uppercase property
- Remove docker-compose DATABASE_URL overrides

Impact:
- ~180 lines of duplicate code eliminated
- All services running healthy with special character password
- 4 docker-compose overrides removed
- Zero breaking changes, all tests passing

Part of TASK-001: Database URL Centralization (Batch 1 - 5/12 services complete)

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -269,10 +269,12 @@ services:
       - ./libs/huleedu_service_libs/src:/app/libs/huleedu_service_libs/src:cached
       - /app/services/identity_service/__pycache__
     environment:
-      - ENV_TYPE=development
+      - ENV_TYPE=docker
       - ENVIRONMENT=development
       - LOG_LEVEL=DEBUG
       - IDENTITY_SERVICE_LOG_LEVEL=DEBUG
+      - IDENTITY_SERVICE_DB_HOST=identity_db
+      - IDENTITY_SERVICE_DB_PORT=5432
 
   # Email Service with development optimizations
   email_service:
